--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,7 @@ find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Multimedia)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets)
 
 set(PROJECT_SOURCES
         main.cpp
@@ -30,6 +31,10 @@ if(${QT_VERSION_MAJOR} GREATER_EQUAL 6)
         clickableslider.h clickableslider.cpp
         focuslineedit.h focuslineedit.cpp
         tag.h tag.cpp
+        tagmanager.h tagmanager.cpp
+        tagsetterdialog.h tagsetterdialog.cpp
+        tagsetterdialogbuilder.h tagsetterdialogbuilder.cpp
+
     )
 # Define target properties for Android with Qt 6 as:
 #    set_property(TARGET AudLooper APPEND PROPERTY QT_ANDROID_PACKAGE_SOURCE_DIR
@@ -54,6 +59,7 @@ target_link_libraries(AudLooper PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 target_link_libraries(AudLooper PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 target_link_libraries(AudLooper PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 target_link_libraries(AudLooper PRIVATE Qt${QT_VERSION_MAJOR}::Multimedia)
+target_link_libraries(AudLooper PRIVATE Qt${QT_VERSION_MAJOR}::Widgets)
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
 # If you are developing for iOS or macOS you should consider setting an
